# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  NEON_DATABASE_SETUP.md  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci-ar-ap-service.yml  ci-audit-service.yml  ci-auth-service.yml  ci-coa-service.yml  ci-ledger-service.yml  ci-shared-lib.yml  ci-tenant-service.yml  docker-build-backend.yml  release.yml
